--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -157,7 +157,6 @@
 .slider {
   display: flex;
   width: 100%;
-  overflow: hidden;
   overflow-x: scroll;
   overflow-y: hidden;
   scroll-behavior: smooth;
@@ -173,7 +172,6 @@
 .slider-loading {
   display: flex;
   width: 100%;
-  overflow: hidden;
   overflow-y: hidden;
   scroll-behavior: smooth;
   transition: all 0.2s;
